[package]
name = "fc-evm-tracing"
authors = [ "bifrost-platform" ]
edition = "2021"
homepage = "https://thebifrost.io"
license = "Apache-2.0"
repository = "https://github.com/bifrost-platform/bifrost-frontier"
version = "0.1.0"

[dependencies]
ethereum-types = { version = "0.14" }
hex = { version = "0.4", features = [ "serde" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0" }

fp-rpc-evm-tracing-events = { path = "../../../primitives/bifrost/rpc/evm-tracing-events" }
fp-rpc-debug = { path = "../../../primitives/bifrost/rpc/debug" }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-std = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.32" }