[package]
name = "fc-rpc-core-debug"
authors = [ "bifrost-platform" ]
edition = "2021"
homepage = "https://thebifrost.io"
license = "Apache-2.0"
repository = "https://github.com/bifrost-platform/bifrost-frontier"
version = "0.1.0"

[dependencies]
ethereum-types = "0.14"
futures = { version = "0.3", features = [ "compat" ] }
jsonrpsee = { version = "0.15.0", default-features = false, features = [ "macros", "server" ] }
fc-evm-tracing = { path = "../../evm-tracing" }
fc-rpc-core-types = { path = "../types" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

sp-core = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.32" }