[package]
name = "fc-rpc-core-trace"
authors = [ "bifrost-platform" ]
edition = "2021"
homepage = "https://thebifrost.io"
license = "Apache-2.0"
repository = "https://github.com/bifrost-platform/bifrost-frontier"
version = "0.6.0"

[dependencies]
ethereum-types = "0.14"
futures = { version = "0.3.1", features = [ "compat" ] }
jsonrpsee = { version = "0.16.2", default-features = false, features = [ "macros", "server" ] }
fc-evm-tracing = { workspace = true }
fc-rpc-core-types = { workspace = true }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"