[package]
name = "fc-rpc-core-txpool"
authors = [ "bifrost-platform" ]
edition = "2021"
homepage = "https://thebifrost.io"
license = "Apache-2.0"
repository = "https://github.com/bifrost-platform/bifrost-frontier"
version = "0.6.0"

[dependencies]
ethereum = { version = "0.14.0", default-features = false, features = [ "with-codec" ] }
ethereum-types = "0.14"
jsonrpsee = { version = "0.16.2", default-features = false, features = [ "macros", "server" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

fc-rpc-core = { workspace = true }