[package]
name = "fc-rpc-core-types"
authors = [ "bifrost-platform" ]
edition = "2021"
homepage = "https://thebifrost.io"
license = "Apache-2.0"
repository = "https://github.com/bifrost-platform/bifrost-frontier"
version = "0.1.0"

[dependencies]
ethereum-types = "0.14"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"