[package]
name = "fc-rpc-trace"
authors = [ "bifrost-platform" ]
edition = "2021"
homepage = "https://thebifrost.io"
license = "Apache-2.0"
repository = "https://github.com/bifrost-platform/bifrost-frontier"
version = "0.6.0"

[dependencies]
ethereum = { version = "0.14.0", features = [ "with-codec" ] }
ethereum-types = "0.14"
futures = { version = "0.3" }
jsonrpsee = { version = "0.16.2", default-features = false, features = [ "macros", "server" ] }
serde = { version = "1.0", features = [ "derive" ] }
sha3 = "0.10"
tokio = { version = "1.10", features = [ "sync", "time" ] }
tracing = "0.1.34"

fc-evm-tracing = { path = "../../evm-tracing" }
fc-rpc-core-trace = { path = "../../rpc-core/trace" }
fc-rpc-core-types = { path = "../../rpc-core/types" }
fp-rpc-debug = { path = "../../../../primitives/bifrost/rpc/debug" }

# Substrate
sc-client-api = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35" }
sc-network = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35" }
sc-utils = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35" }
sp-api = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35" }
sp-block-builder = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35" }
sp-blockchain = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35" }
sp-io = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35" }
sp-runtime = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35" }
sp-std = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35" }
sp-transaction-pool = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35" }

# Frontier
fc-consensus = { path = "../../../consensus" }
fc-rpc = { path = "../../../rpc", features = [ "rpc_binary_search_estimate" ] }
fc-rpc-core = { path = "../../../rpc-core" }
fp-rpc = { path = "../../../../primitives/rpc" }