[package]
name = "fc-rpc-trace"
authors = ["bifrost-platform"]
edition = "2021"
homepage = "https://thebifrost.io"
license = "Apache-2.0"
repository = "https://github.com/bifrost-platform/bifrost-frontier"
version = "0.6.0"

[dependencies]
ethereum = { version = "0.14.0", features = ["with-codec"] }
ethereum-types = "0.14"
futures = { version = "0.3" }
jsonrpsee = { version = "0.16.2", default-features = false, features = ["macros", "server"] }
log = { workspace = true }
prometheus-endpoint = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10"
tokio = { version = "1.10", features = ["sync", "time"] }
tracing = "0.1.34"

fc-evm-tracing = { workspace = true }
fc-rpc-core-trace = { workspace = true }
fc-rpc-core-types = { workspace = true }
fp-rpc-debug = { workspace = true }

# Substrate
sc-client-api = { workspace = true }
sc-network = { workspace = true }
sc-utils = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }

# Frontier
fc-consensus = { workspace = true }
fc-rpc = { workspace = true, features = ["rpc-binary-search-estimate"] }
fc-rpc-core = { workspace = true }
fc-storage = { workspace = true }
fp-rpc = { workspace = true }
