[package]
name = "fc-rpc-txpool"
authors = [ "bifrost-platform" ]
edition = "2021"
homepage = "https://thebifrost.io"
license = "Apache-2.0"
repository = "https://github.com/bifrost-platform/bifrost-frontier"
version = "0.6.0"

[dependencies]
jsonrpsee = { version = "0.16.2", default-features = false, features = [ "macros", "server" ] }
rlp = "0.5"
serde = { version = "1.0", features = [ "derive" ] }
sha3 = "0.10"

fc-rpc-core-txpool = { path = "../../rpc-core/txpool" }
fp-rpc-txpool = { path = "../../../../primitives/bifrost/rpc/txpool" }

# Substrate
frame-system = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35" }
sc-transaction-pool = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35" }
sc-transaction-pool-api = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35" }
sp-api = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35" }
sp-blockchain = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35" }
sp-io = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35" }
sp-runtime = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35" }
sp-std = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35" }

# Frontier
ethereum-types = "0.14"
fc-rpc = { path = "../../../rpc", features = [ "rpc_binary_search_estimate" ] }