[package]
name = "fc-rpc-txpool"
authors = [ "bifrost-platform" ]
edition = "2021"
homepage = "https://thebifrost.io"
license = "Apache-2.0"
repository = "https://github.com/bifrost-platform/bifrost-frontier"
version = "0.6.0"

[dependencies]
jsonrpsee = { version = "0.16.2", default-features = false, features = [ "macros", "server" ] }
rlp = "0.5"
serde = { version = "1.0", features = [ "derive" ] }
sha3 = "0.10"

fc-rpc-core-txpool = { workspace = true }
fp-rpc-txpool = { workspace = true }

# Substrate
frame-system = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Frontier
ethereum-types = "0.14"
fc-rpc = { workspace = true, features = [ "rpc-binary-search-estimate" ] }