[package]
name = "fp-rpc-evm-tracing-events"
authors = ["bifrost-platform"]
edition = "2021"
homepage = "https://thebifrost.io"
license = "Apache-2.0"
repository = "https://github.com/bifrost-platform/bifrost-frontier"
version = "0.1.0"

[dependencies]
environmental = { version = "1.1.2", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-runtime-interface = { workspace = true }

# Ethereum
ethereum = { workspace = true }
ethereum-types = { workspace = true }
evm = { workspace = true }
evm-gasometer = { workspace = true }
evm-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"environmental/std",
	"ethereum-types/std",
	"ethereum/std",
	"evm-gasometer/std",
	"evm-runtime/std",
	"evm/std",
	"sp-runtime-interface/std",
]
evm-tracing = ["evm-gasometer/tracing", "evm-runtime/tracing", "evm/tracing"]
